--- a/index.html
+++ b/index.html
@@ -97,12 +97,33 @@
 
         <div class="component" id="instructor-information">
             <h3>I. Instructor Information</h3>
-            <p><b>Instructor’s name:</b> Eric Pogue</p>
-            <p><b>Lewis office location:</b> AS-132-A</p>
+            <p><b>Instructor’s name:</b> ...</p>
+            <p><b>Lewis office location:</b> ...</p>
             <p><b>Office hours:</b> MWF 1-2pm CT by appointment</p>
             <p><b>Appointments:</b> Appointments can be requested via email</p>   
-            <p><b>Lewis Phone Number:</b> 563-209-7280 (mobile)</p>
-            <p><b>Lewis email address:</b> epogue@lewisu.edu</p>
+            <p><b>Lewis Phone Number:</b> ...</p>
+            <p><b>Lewis email address:</b> ...</p>
+        </div>
+
+        <div class="component" id="course-information">
+            <h3>II. Course Information</h3>
+            <p><b>Course:</b> Software Engineering (CPSC-44000-LT1)</p>
+            <p><b>Course Credit Hours:</b> 3</p>
+            <h4><b>Course description: </b></h4>
+            <p class="indented-paragraph">Methods, strategies, and tools for implementing software systems, particularly as part
+            of a development team. Topics include the software development life cycle, Unified
+            Modeling Language, software testing techniques, software security, open-source
+            development, requirements gathering and documentation, maintenance, and basic
+            software project management.</p>
+            <p>Prerequisites: CPSC-24500 Object-Oriented Programming</p>
+            <p><b>Course meeting times:</b> MWF 12-12:50am CT from August 31 through December 12th</p>
+            <p><b>Meeting location:</b> AS 104A</p>
+            <p><b>Course final:</b> Monday, December 14th from 1:30 to 3:30pm CT</p>
+            <h4><b>Student Learning Outcomes</b></h4>
+            <ol>
+                <li>. compare and contrast various software process models</li>
+                <li>. be able to elicit and analyze requirements of a proposed application</li>
+            </ol>
         </div>
 
         <div class="component" id="course-information">
