--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         }
 
         .component h3 {
-            padding-top: 2%;
+            padding-top: 3%;
             padding-bottom: 2%;
         }
 
@@ -68,9 +68,36 @@
             padding-bottom: 1%;
         }
 
+        .component ol {
+            padding-bottom: 2%;
+            padding-left: 2%;
+            list-style-position: inside;
+        }
+
         .component .indented-paragraph {
             padding-left: 1%;
             padding-bottom: 2%;
+        }
+
+        table, td, tr, th {
+            border: 1px solid #000;
+            border-collapse: collapse;
+            padding-left: 1%;
+            padding-right: 1%;
+        }
+
+        th {
+            background-color: rgb(105, 105, 105);
+            padding-right: 10%;
+        }
+
+        table {
+            margin-left: 4%;
+            margin-right: 4%;
+        }
+
+        .module-number {
+            text-align: right;
         }
     </style>
 
@@ -111,35 +138,103 @@
             <p><b>Course Credit Hours:</b> 3</p>
             <h4><b>Course description: </b></h4>
             <p class="indented-paragraph">Methods, strategies, and tools for implementing software systems, particularly as part
-            of a development team. Topics include the software development life cycle, Unified
-            Modeling Language, software testing techniques, software security, open-source
-            development, requirements gathering and documentation, maintenance, and basic
-            software project management.</p>
+                of a development team. Topics include the software development life cycle, Unified
+                Modeling Language, software testing techniques, software security, open-source
+                development, requirements gathering and documentation, maintenance, and basic
+                software project management.</p>
             <p>Prerequisites: CPSC-24500 Object-Oriented Programming</p>
             <p><b>Course meeting times:</b> MWF 12-12:50am CT from August 31 through December 12th</p>
             <p><b>Meeting location:</b> AS 104A</p>
             <p><b>Course final:</b> Monday, December 14th from 1:30 to 3:30pm CT</p>
             <h4><b>Student Learning Outcomes</b></h4>
             <ol>
-                <li>. compare and contrast various software process models</li>
-                <li>. be able to elicit and analyze requirements of a proposed application</li>
+                <li>compare and contrast various software process models</li>
+                <li>be able to elicit and analyze requirements of a proposed application</li>
+                <li>write clear and complete requirements documents</li>
+                <li>....</li>
             </ol>
+            <h4><b>Programming student learning outcomes:</b></h4>
+            <ol>
+                <li>develop programs using languages having different programming paradigms and for a variety of
+                    platforms</li>
+                <li>select the most appropriate data structures and algorithms for the given problem</li>
+                <li>explain how programming languages are designed and implemented</li>
+                <li>....</li>
+            </ol>
+            <h4><b>....</b></h4>
         </div>
 
-        <div class="component" id="course-information">
-            <h3>II. Course Information</h3>
-            <p><b>Course:</b> Software Engineering (CPSC-44000-LT1)</p>
-            <p><b>Course Credit Hours:</b> 3</p>
-            <h4><b>Course description: </b></h4>
-            <p class="indented-paragraph">Methods, strategies, and tools for implementing software systems, particularly as part
-            of a development team. Topics include the software development life cycle, Unified
-            Modeling Language, software testing techniques, software security, open-source
-            development, requirements gathering and documentation, maintenance, and basic
-            software project management.</p>
-            <p>Prerequisites: CPSC-24500 Object-Oriented Programming</p>
-            <p><b>Course meeting times:</b> MWF 12-12:50am CT from August 31 through December 12th</p>
-            <p><b>Meeting location:</b> AS 104A</p>
-            <p><b>Course final:</b> Monday, December 14th from 1:30 to 3:30pm CT</p>
+        <div class="component" id="university-mission-statement">
+            <h3>III. University Mission Statement</h3>
+            <p>...</p>
+        </div>
+
+        <div class="component" id="in-between">
+            <h3>...</h3>
+            <p>...</p>
+        </div>
+
+        <div class="component" id="grading-criteria-and-course-policies">
+            <h3>Assignments and Course Requirements:</h3>
+            <p class="indented-paragraph">Assignments for this course will take the form of Programming Projects, Quizzes,
+                Discussion Board topics, a class Demonstration, and a Final Project. </p>
+            <p><b>Course Grade:</b> The course grade will be based on the following:</p>
+            <table>
+                <th>Assignment</th>
+                <th>Pts</th>
+                <th>#</th>
+                <th>Total Pts</th>
+                <th>% of Grade</th>
+
+                <tr>
+                    <td>Lab</td>
+                    <td>8</td>
+                    <td>70</td>
+                    <td>560</td>
+                    <td>56%</td>
+                </tr>
+
+                <tr>
+                    <td>Quiz</td>
+                    <td>40</td>
+                    <td>8</td>
+                    <td>320</td>
+                    <td>32%</td>
+                </tr>
+
+                <tr>
+                    <td>Discussion</td>
+                    <td>8</td>
+                    <td>8</td>
+                    <td>64</td>
+                    <td>6%</td>
+                </tr>
+
+                <tr>
+                    <td>Reflection</td>
+                    <td>3</td>
+                    <td>8</td>
+                    <td>24</td>
+                    <td>2%</td>
+                </tr>
+
+                <tr>
+                    <td>Demo</td>
+                    <td>12</td>
+                    <td>1</td>
+                    <td>12</td>
+                    <td>1%</td>
+                </tr>
+
+                <tr>
+                    <td>Final Project Presentation</td>
+                    <td>20</td>
+                    <td>1</td>
+                    <td>20</td>
+                    <td>2%</td>
+                </tr>
+            </table>
+            
         </div>
     </body>
 
