--- a/index.html
+++ b/index.html
@@ -79,25 +79,19 @@
             padding-bottom: 2%;
         }
 
-        table, td, tr, th {
+        .component table, td, tr, th {
             border: 1px solid #000;
             border-collapse: collapse;
             padding-left: 1%;
             padding-right: 1%;
+            margin-top: 2%;
+            margin-left: 5%;
         }
 
         th {
             background-color: rgb(105, 105, 105);
-            padding-right: 10%;
-        }
-
-        table {
-            margin-left: 4%;
-            margin-right: 4%;
-        }
-
-        .module-number {
-            text-align: right;
+            padding-left: 20px;  
+            padding-right: 10px 
         }
     </style>
 
