--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         <div class="component" id="instructor-information">
             <h3>I. Instructor Information</h3>
-            <p><b>Instructor’s name:</b> ...</p>
+            <p><b>Instructor name:</b> ...</p>
             <p><b>Lewis office location:</b> ...</p>
             <p><b>Office hours:</b> MWF 1-2pm CT by appointment</p>
             <p><b>Appointments:</b> Appointments can be requested via email</p>   
