--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
     <style>
         * {
             margin: 0%;
@@ -34,6 +34,18 @@
             display: inline;
             padding-left: 1%;
             padding-right: .5%;
+            color: #fff;
+        }
+
+        .links a {
+            color: #fff;
+            list-style: none;
+            font-style: none;
+            text-decoration: none;
+        }
+
+        .links a:hover {
+            color: rgb(192, 183, 183);
         }
 
         .component {
@@ -88,27 +100,28 @@
     </style>
 
     <head>
-        <meta charset="UTF=8">
+        <meta charset='UTF=8'>
         <title>Course Syllabus</title>
     </head>
 
     <body>
+        
 
 
-        <div class="banner">
-            <ul class="links">
-                <li>Syllabus</li>
-                <li>Regexp</li>
+        <div class='banner'>
+            <ul class='links'>
+                <li>-Syllabus-</li>
+                <li><a href='./regexp.html'>Regexp</a><li>
             </ul>         
         </div>
 
-        <div class="course-description">
+        <div class='course-description'>
             <h3>Software Engineering - 44000</h3>
             <p>Syllabus</p>
             <p>Fall Semester 2020</p>
         </div>
 
-        <div class="component" id="instructor-information">
+        <div class='component' id='instructor-information'>
             <h3>I. Instructor Information</h3>
             <p><b>Instructor name:</b> ...</p>
             <p><b>Lewis office location:</b> ...</p>
@@ -118,12 +131,12 @@
             <p><b>Lewis email address:</b> ...</p>
         </div>
 
-        <div class="component" id="course-information">
+        <div class='component' id='course-information'>
             <h3>II. Course Information</h3>
             <p><b>Course:</b> Software Engineering (CPSC-44000-LT1)</p>
             <p><b>Course Credit Hours:</b> 3</p>
             <h4><b>Course description: </b></h4>
-            <p class="indented-paragraph">Methods, strategies, and tools for implementing software systems, particularly as part
+            <p class='indented-paragraph'>Methods, strategies, and tools for implementing software systems, particularly as part
                 of a development team. Topics include the software development life cycle, Unified
                 Modeling Language, software testing techniques, software security, open-source
                 development, requirements gathering and documentation, maintenance, and basic
@@ -150,19 +163,19 @@
             <h4><b>....</b></h4>
         </div>
 
-        <div class="component" id="university-mission-statement">
+        <div class='component' id='university-mission-statement'>
             <h3>III. University Mission Statement</h3>
             <p>...</p>
         </div>
 
-        <div class="component" id="in-between">
+        <div class='component' id='in-between'>
             <h3>...</h3>
             <p>...</p>
         </div>
 
-        <div class="component" id="grading-criteria-and-course-policies">
+        <div class='component' id='grading-criteria-and-course-policies'>
             <h3>Assignments and Course Requirements:</h3>
-            <p class="indented-paragraph">Assignments for this course will take the form of Programming Projects, Quizzes,
+            <p class='indented-paragraph'>Assignments for this course will take the form of Programming Projects, Quizzes,
                 Discussion Board topics, a class Demonstration, and a Final Project. </p>
             <p><b>Course Grade:</b> The course grade will be based on the following:</p>
             <table>
