--- a/regexp.html
+++ b/regexp.html
@@ -101,7 +101,7 @@
         </div>
 
         <div class='container' id="result-container">
-            <div class='stage-text'>Result: </div> <output id='boolean-output'></output>
+            <div class='stage-text'>Result: </div>  <input id="boolean-output" type="text" value="" size="5" disabled>
         </div>
 
         <div class='container'>
