regexp output work.2

--- a/regexp.html
+++ b/regexp.html
@@ -117,7 +117,7 @@
             var regex = new RegExp(reg);
             var op = document.getElementById('boolean-output');
 
-            op.innerHTML = regex.test(str);
+            op.value = regex.test(str);
         }
     </script>
 
